CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(RandomFilesystemGenerator)

FIND_PACKAGE(Boost 1.60 COMPONENTS program_options filesystem REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -std=c++11")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")

SET(SOURCE_FILES main.cpp)
ADD_EXECUTABLE(rfg ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(rfg ${Boost_LIBRARIES})
